Add Login and Registration functionality

--- a/student/src/main/res/layout/activity_main.xml
+++ b/student/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="thedorkknightrises.attendance.student.MainActivity">
+    tools:context="thedorkknightrises.attendance.student.ui.activities.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
