--- a/student/src/main/res/layout/activity_login.xml
+++ b/student/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
             android:visibility="gone" />
 
         <LinearLayout
+            android:id="@+id/login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
