--- a/student/src/main/res/values/colors.xml
+++ b/student/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#66bb6a</color>
     <color name="colorPrimaryDark">#4caf50</color>
     <color name="colorAccent">#7e57c2</color>
+    <color name="red">#f44336</color>
 </resources>
