[student] Show correct user details in PreferenceFragment

--- a/student/src/main/res/layout/fragment_preference.xml
+++ b/student/src/main/res/layout/fragment_preference.xml
@@ -40,11 +40,11 @@
                         android:text="@string/email" />
 
                     <TextView
-                        android:id="@+id/department"
+                        android:id="@+id/student"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="4dp"
-                        android:text="@string/dept" />
+                        android:text="@string/student" />
 
                 </LinearLayout>
 
