--- a/teacher/src/main/res/values/colors.xml
+++ b/teacher/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#7e57c2</color>
     <color name="colorPrimaryDark">#673ab7</color>
     <color name="colorAccent">#66bb6a</color>
+    <color name="red">#f44336</color>
 </resources>
