[student|teacher] Handle a NullPointerException when server does not respond

--- a/teacher/src/main/res/layout/activity_create_course.xml
+++ b/teacher/src/main/res/layout/activity_create_course.xml
@@ -9,9 +9,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include
-            layout="@layout/toolbar"/>
-
         <LinearLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
@@ -70,10 +67,10 @@
 
             <Button
                 android:id="@+id/create_course_button"
+                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Create Course"
-                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
+                android:text="Create Course" />
 
         </LinearLayout>
 
