--- a/teacher/src/main/res/values/colors.xml
+++ b/teacher/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#673ab7</color>
     <color name="colorAccent">#66bb6a</color>
     <color name="red">#f44336</color>
+    <color name="colorSystemBarsLight">#66000000</color>
 </resources>
