--- a/teacher/src/main/res/layout/activity_create_course.xml
+++ b/teacher/src/main/res/layout/activity_create_course.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:id="@+id/container"
@@ -67,10 +68,11 @@
 
             <Button
                 android:id="@+id/create_course_button"
-                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+                style="@style/Base.Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Create Course" />
+                android:minHeight="56dp"
+                android:text="@string/create_course" />
 
         </LinearLayout>
 
@@ -83,7 +85,7 @@
             android:layout_marginBottom="8dp"
             android:visibility="gone" />
 
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 
 </android.support.constraint.ConstraintLayout>
