--- a/student/src/main/res/layout/fragment_calendar.xml
+++ b/student/src/main/res/layout/fragment_calendar.xml
@@ -1,21 +1,36 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="thedorkknightrises.attendance.student.ui.fragments.CalendarFragment">
 
-    <TextView
-        android:id="@+id/calendar_header"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:text="Month &amp; Year" />
+        android:layout_height="wrap_content"
+        app:cardUseCompatPadding="true">
 
-    <jp.co.recruit_mp.android.lightcalendarview.LightCalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/calendar_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                tools:text="Month &amp; Year" />
+
+            <jp.co.recruit_mp.android.lightcalendarview.LightCalendarView
+                android:id="@+id/calendarView"
+                android:layout_width="match_parent"
+                android:layout_height="400dp" />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+</FrameLayout>
