--- a/student/src/main/res/values/colors.xml
+++ b/student/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#4caf50</color>
     <color name="colorAccent">#7e57c2</color>
     <color name="red">#f44336</color>
+    <color name="colorSystemBarsLight">#66000000</color>
 </resources>
