--- a/student/src/main/res/layout/fragment_calendar.xml
+++ b/student/src/main/res/layout/fragment_calendar.xml
@@ -1,9 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="thedorkknightrises.attendance.student.ui.fragments.CalendarFragment">
+
+    <include android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -33,4 +37,4 @@
 
     </android.support.v7.widget.CardView>
 
-</FrameLayout>
+</LinearLayout>
