--- a/teacher/src/main/res/layout/toolbar.xml
+++ b/teacher/src/main/res/layout/toolbar.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar
-    android:id="@+id/toolbar"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="4dp"
-    android:background="@color/colorPrimary"/>
+    android:background="@color/colorPrimary"
+    android:elevation="4dp">
+
+    <TextView
+        android:id="@+id/toolbar_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse" />
+
+</android.support.v7.widget.Toolbar>
