--- a/student/src/main/res/values/colors.xml
+++ b/student/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#66bb6a</color>
-    <color name="colorPrimaryDark">#4caf50</color>
+    <color name="colorPrimary">#4caf50</color>
+    <color name="colorPrimaryDark">#388e3c</color>
     <color name="colorAccent">#7e57c2</color>
     <color name="red">#f44336</color>
     <color name="colorSystemBarsLight">#66000000</color>
