--- a/teacher/src/main/res/values/colors.xml
+++ b/teacher/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7e57c2</color>
-    <color name="colorPrimaryDark">#673ab7</color>
+    <color name="colorPrimary">#673ab7</color>
+    <color name="colorPrimaryDark">#512da8</color>
     <color name="colorAccent">#66bb6a</color>
     <color name="red">#f44336</color>
     <color name="colorSystemBarsLight">#66000000</color>
