--- a/teacher/src/main/res/layout/activity_main.xml
+++ b/teacher/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.MainActivity"
-    tools:layout_editor_absoluteY="81dp">
+    tools:context=".ui.activities.MainActivity">
 
     <FrameLayout
         android:id="@+id/frameLayout"
