--- a/teacher/src/main/res/layout/list_item_student.xml
+++ b/teacher/src/main/res/layout/list_item_student.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardElevation="2dp">
+    android:orientation="vertical"
+    app:cardElevation="2dp"
+    app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,19 +21,19 @@
             <TextView
                 android:id="@+id/name"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="Student Name"
+                android:layout_weight="1"
                 android:padding="5dp"
-                android:textSize="20sp"
-                android:textColor="@color/textColorDark"/>
+                android:text="Student Name"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textSize="20sp" />
 
             <ImageView
                 android:id="@+id/expand_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_expand_more_black_24dp"
-                android:padding="5dp"/>
+                android:padding="5dp"
+                android:src="@drawable/ic_expand_more_black_24dp" />
 
         </LinearLayout>
 
@@ -47,36 +47,36 @@
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Username: "
                 android:padding="5dp"
-                android:textSize="17sp"
-                android:textColor="@color/textColorDark"/>
+                android:text="Username: "
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textSize="17sp" />
 
             <TextView
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email: "
                 android:padding="5dp"
-                android:textSize="17sp"
-                android:textColor="@color/textColorDark"/>
+                android:text="Email: "
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textSize="17sp" />
 
             <TextView
                 android:id="@+id/uid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Uid: "
                 android:padding="5dp"
-                android:textSize="17sp"
-                android:textColor="@color/textColorDark"/>
+                android:text="Uid: "
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textSize="17sp" />
 
             <Button
                 android:id="@+id/change_attendance"
+                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Change Attendance"
                 android:layout_gravity="end"
-                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
+                android:text="Change Attendance" />
         </LinearLayout>
 
     </LinearLayout>
