--- a/teacher/src/main/res/layout/bottom_sheet_lecture_create.xml
+++ b/teacher/src/main/res/layout/bottom_sheet_lecture_create.xml
@@ -115,6 +115,7 @@
         android:hint="Add comment (Optional)"/>
 
     <Button
+        android:id="@+id/createLectureButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
