--- a/student/src/main/res/layout/fragment_courses.xml
+++ b/student/src/main/res/layout/fragment_courses.xml
@@ -33,6 +33,7 @@
             app:contentInsetStart="8dp">
 
             <android.support.v7.widget.SearchView
+                android:id="@+id/searchView"
                 style="@style/Widget.AppCompat.SearchView.ActionBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
