--- a/student/src/main/res/layout/fragment_preference.xml
+++ b/student/src/main/res/layout/fragment_preference.xml
@@ -61,6 +61,22 @@
             </android.support.v7.widget.CardView>
 
             <TextView
+                android:id="@+id/rescan_face_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:drawablePadding="16dp"
+                android:drawableStart="@drawable/ic_tag_faces_grey_24dp"
+                android:focusable="true"
+                android:foreground="?attr/selectableItemBackground"
+                android:gravity="center_vertical"
+                android:minHeight="64dp"
+                android:padding="16dp"
+                android:text="@string/update_face"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
+                android:textColor="#ff666666" />
+
+            <TextView
                 android:id="@+id/replay_intro_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
