[student] Make camera mandatory, remove redundant RECORD_AUDIO permission

--- a/student/src/main/res/layout/activity_face_record.xml
+++ b/student/src/main/res/layout/activity_face_record.xml
@@ -13,7 +13,8 @@
         android:keepScreenOn="true"
         app:cameraSessionType="video"
         app:cameraFacing="front"
-        app:cameraVideoQuality="max480p" />
+        app:cameraVideoQuality="max480p"
+        app:cameraAudio="off" />
 
     <FrameLayout
         android:layout_width="wrap_content"
