--- a/teacher/src/main/res/layout/activity_course_detail.xml
+++ b/teacher/src/main/res/layout/activity_course_detail.xml
@@ -168,6 +168,17 @@
             android:layout_alignParentEnd="true"
             android:layout_margin="19sp"
             android:src="@drawable/ic_add_black_24dp"/>
+
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
+
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
