[teacher] Lecture fetching done

--- a/teacher/src/main/res/layout/activity_course_detail.xml
+++ b/teacher/src/main/res/layout/activity_course_detail.xml
@@ -126,6 +126,7 @@
                             android:textSize="17sp"
                             android:textStyle="bold" />
                         <TextView
+                            android:id="@+id/lect_count"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
