--- a/teacher/src/main/res/layout/list_item_lecture.xml
+++ b/teacher/src/main/res/layout/list_item_lecture.xml
@@ -22,9 +22,10 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:textSize="17sp"
             android:padding="10dp"
+            android:textAlignment="viewEnd"
             android:text="Attendance:- Pending "/>
 
     </LinearLayout>
