[student] Add attendance stats with Pie Chart in CourseDetailActivity

--- a/student/src/main/res/values/colors.xml
+++ b/student/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#388e3c</color>
     <color name="colorAccent">#7e57c2</color>
     <color name="red">#f44336</color>
+    <color name="green">#388e3c</color>
     <color name="colorSystemBarsLight">#66000000</color>
 </resources>
