--- a/teacher/src/main/res/drawable/ic_launcher_background.xml
+++ b/teacher/src/main/res/drawable/ic_launcher_background.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportHeight="108"
-    android:viewportWidth="108">
-    <path
-        android:fillColor="@color/colorPrimary"
-        android:pathData="M0,0h108v108h-108z" />
-</vector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <gradient
+        android:angle="135"
+        android:endColor="@color/colorAccent"
+        android:startColor="@color/colorPrimary"
+        android:type="linear" />
+
+</shape>
