--- a/teacher/src/main/res/values/colors.xml
+++ b/teacher/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#673ab7</color>
-    <color name="colorPrimaryDark">#512da8</color>
-    <color name="colorAccent">#66bb6a</color>
+    <color name="colorPrimary">#4dd0e1</color>
+    <color name="colorPrimaryLight">#00bcd4</color>
+    <color name="colorPrimaryDark">#0097a7</color>
+    <color name="colorAccent">#1a237e</color>
+    <color name="colorAccentLight">#534bae</color>
+    <color name="colorAccentDark">#000051</color>
+
     <color name="red">#f44336</color>
     <color name="colorSystemBarsLight">#66000000</color>
 </resources>
